# openapi.yml
@@ -32,7 +32,9 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/ComparisonReport"
+                type: array
+                items:
+                  $ref: "#/components/schemas/LocationComparison"
         '400':
           $ref: '#/components/responses/BadRequest'
         '404':
@@ -127,48 +129,45 @@ components:
         - occupied
         - detected_barcodes
 
-    ComparisonReport:
-      description: A report comparing a machine report to a user report
-      type: array
-      items:
-        type: object
-        title: LocationComparison
-        properties:
-          name:
+    LocationComparison:
+      type: object
+      properties:
+        name:
+          type: string
+          description: The name of the location
+        scanned:
+          type: boolean
+          description: Whether or not the location was successfully scanned
+        occupied:
+          type: boolean
+          description: Whether or not the location was occupied
+        expected_barcodes:
+          type: array
+          description: The barcodes that were expected to be found in this location
+          items:
             type: string
-            description: The name of the location
-          scanned:
-            type: boolean
-            description: Whether or not the location was successfully scanned
-          occupied:
-            type: boolean
-            description: Whether or not the location was occupied
-          expected_barcodes:
-            type: array
-            description: The barcodes that were expected to be found in this location
-            items:
-              type: string
-          detected_barcodes:
-            type: array
-            description: The barcodes that were actually found in this location
-            items:
-              type: string
-          status:
+        detected_barcodes:
+          type: array
+          description: The barcodes that were actually found in this location
+          items:
             type: string
-            description: The status resulting from the comparison
-            enum:
-              - Empty, as expected
-              - Empty, but it should have been occupied
-              - Occupied by the expected items
-              - Occupied by the wrong items
-              - Occupied by an item, but should have been empty
-              - Occupied, but no barcode could be identified
-        required:
-          - name
-          - scanned
-          - occupied
-          - expected_barcodes
-          - detected_barcodes
-          - status
+        status:
+          type: string
+          description: The status resulting from the comparison
+          enum:
+            - Not scanned
+            - Empty, as expected
+            - Empty, but it should have been occupied
+            - Occupied by the expected items
+            - Occupied by the wrong items
+            - Occupied by an item, but should have been empty
+            - Occupied, but no barcode could be identified
+      required:
+        - name
+        - scanned
+        - occupied
+        - expected_barcodes
+        - detected_barcodes
+        - status
 
-    
+  
